--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  video_player: ^2.8.1 
-  flutter_launcher_icons: ^0.14.4
   toast: ^0.3.0
   fluttertoast: ^8.2.12
-  # video_player: ^2.10.0
+  video_player: ^2.10.0
   provider: ^6.1.5+1
   flutter_bloc: ^9.1.1
   flutter_redux: ^0.10.0
@@ -57,16 +51,30 @@ dependencies:
   google_fonts: ^6.3.1
   qr_flutter: ^4.1.0
   mobile_scanner: ^7.1.2
-  animations: ^2.0.11
   image_picker: ^1.2.0
   google_mlkit_face_detection: ^0.13.1
+  firebase_storage: ^13.0.2
+  keyboard_height_plugin: ^0.1.5
+  # provider: ^6.1.5+1
+
+
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
+  animations: ^2.0.11
+  # qr_code_scanner: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.7.0
   mobx_codegen: ^2.7.2
-  # flutter_launcher_icons: ^0.14.4
+  flutter_launcher_icons: ^0.14.4
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,23 +82,49 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  flutter_native_splash: ^2.4.0
+  flutter_native_splash: ^2.4.6
+
+
+# flutter spalsh screen formatting
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/techcaddSplash.png
+  # background_image: assets/images/background.png
+  color_dark: "#282C5C"
+  android_gravity: center
+  android: true
+  ios: true
+  android_12:
+    color: "#ffffff"
+    image: assets/images/techcaddSplash.png
+    # icon_background_color: "#ffffff"
+    color_dark: "#282C5C"
+    android_gravity: center
+    image_dark: assets/images/tech.png
+  # icon
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/images/tech.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  
+
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/techcadd.png
-    - assets/images/whitebg.jpg
-    - assets/videos/splash.mp4
+   - assets/images/
+    # -assets/images/icon.png
+    # - assets/videos/splash.mp4
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -117,26 +151,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-# flutter spalsh screen formatting
-flutter_native_splash:
-  color: "#ffffff"
-  image: assets/images/icon_day.png
-  # background_image: assets/images/background.png
-  color_dark: "#282C5C"
-  android_gravity: center
-  android: true
-  ios: true
-  android_12:
-    color: "#ffffff"
-    image: assets/images/icon_day.png
-    # icon_background_color: "#ffffff"
-    color_dark: "#282C5C"
-    android_gravity: center
-    image_dark: assets/images/tech.png
-  # icon
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: assets/images/icon512.png
-
-
